tests/bug_detector_tests/conditionalBranch3.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=conditionalBranch3
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
* Bug Detector * \n\
conditionalBranch3.js:1:1~1:2: [Warning] Conditional expression '1' is always true. \n\
conditionalBranch3.js:2:5~2:6: [Warning] Conditional expression '4' is always true. \n\
conditionalBranch3.js:3:5~3:6: [Warning] Conditional expression '7' is always true. \n\
conditionalBranch3.js:4:5~4:21: [Warning] Conditional expression '8 != 8 && 9 != 9' is always false. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  SyntaxErrors      :      0 (  0.00%) | \n\
|  TypeErrors        :      0 (  0.00%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      4 (100.00%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      4 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      0 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      0 | \n\
|  StrictMode              :      0 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector_err_equals=
