tests/bug_detector_tests/conditionalBranch3.js
1 ? 2 : 3;
if (4) 5; else 6;
if (7);
if (8 != 8 && 9 != 9); else "false_branch";

v1 = Math.random();
v2 = Math.random();
if (v1 == 1 && v2 == 2 && 3 == 3);
if (v1 == 1 || v2 == 2 || 3 != 3);
